# pagetop

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  LICENSE-MIT  MAINTAINERS.md  README.md  README_es.md  STARTER.Cargo.toml  STARTER.bin.Cargo.toml  build.rs  rustfmt.toml
drust/: Cargo.toml  README.md
drust/config/: common.toml  default.toml  local.toml
drust/src/: main.rs
drust/tools/: drop-drust-db.sh
extensions/pagetop-aliner/: Cargo.toml  README.md
extensions/pagetop-aliner/src/: lib.rs
extensions/pagetop-aliner/static/css/: styles.css
extensions/pagetop-bootsier/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs
extensions/pagetop-bootsier/src/: bs.rs  config.rs  lib.rs  theme.rs
extensions/pagetop-bootsier/src/bs/: dropdown.rs  grid.rs  image.rs  navbar.rs  offcanvas.rs  utility.rs
extensions/pagetop-bootsier/src/theme/: attrs.rs  aux.rs  button.rs  classes.rs  container.rs  dropdown.rs  form.rs  icon.rs  image.rs  nav.rs  (+2 more)
extensions/pagetop-mdbook/: Cargo.toml  build.rs
extensions/pagetop-mdbook/src/: lib.rs
extensions/pagetop-seaorm/: Cargo.toml  README.md
extensions/pagetop-seaorm/src/: config.rs  db.rs  lib.rs  migration.rs
helpers/pagetop-build/: CHANGELOG.md  Cargo.toml  README.md
helpers/pagetop-build/src/: lib.rs
helpers/pagetop-macros/: CHANGELOG.md  Cargo.toml  README.md
helpers/pagetop-macros/src/: lib.rs  maud.rs  smart_default.rs
helpers/pagetop-minimal/: CHANGELOG.md  Cargo.toml  README.md
helpers/pagetop-minimal/src/: lib.rs
helpers/pagetop-statics/: CHANGELOG.md  Cargo.toml  README.md  build.rs
helpers/pagetop-statics/src/: lib.rs  resource.rs  resource_dir.rs  resource_files.rs  sets.rs
pagetop/: Cargo.toml  README.md  STARTER.Cargo.toml  STARTER.bin.Cargo.toml  STARTER.lib.Cargo.toml  build.rs
pagetop-admin/: Cargo.toml  README.md
pagetop-admin/src/: lib.rs  summary.rs
pagetop-aliner/: Cargo.toml  README.md  build.rs
pagetop-aliner/src/: lib.rs
pagetop-bootsier/: Cargo.toml  build.rs
pagetop-bootsier/src/: lib.rs
pagetop-bootsier/static/css/: styles.css
pagetop-build/: Cargo.toml  README.md
pagetop-build/src/: lib.rs
pagetop-bulmix/: Cargo.toml  build.rs
pagetop-bulmix/src/: lib.rs
pagetop-homedemo/: Cargo.toml  README.md  build.rs
pagetop-homedemo/src/: lib.rs
pagetop-homedemo/static/css/: styles.css
pagetop-jquery/: Cargo.toml  README.md  build.rs
pagetop-jquery/src/: lib.rs
pagetop-macros/: Cargo.toml  README.md
pagetop-macros/src/: lib.rs  maud.rs
pagetop-macros/src/maud/: generate.rs
pagetop-mdbook/: Cargo.toml  README.md  build.rs
pagetop-mdbook/src/: lib.rs  util.rs
pagetop-mdbook/template/: book.toml
pagetop-megamenu/: Cargo.toml  README.md  build.rs
pagetop-megamenu/src/: component.rs  lib.rs
pagetop-megamenu/src/component/: item.rs  menu.rs
pagetop-megamenu/static/css/: smartmenus.css
pagetop-minimal/: Cargo.toml  README.md  build.rs
pagetop-minimal/src/: component.rs  lib.rs
pagetop-minimal/src/component/: anchor.rs  block.rs  container.rs  flex.rs  form_element.rs  grid.rs  heading.rs  html.rs  icon.rs  image.rs  paragraph.rs  powered_by.rs  poweredby.rs  site_branding.rs
pagetop-minimal/src/module/: menu.rs
pagetop-minimal/static/css/: flex.css  minimal.css
pagetop-node/: Cargo.toml  README.md
pagetop-node/src/: lib.rs
pagetop-node/src/migration/: m20220316_000001_create_table_node_type.rs  m20220316_000002_create_table_node.rs  m20220316_000003_create_table_node_access.rs  m20220316_000004_create_table_node_revision.rs
pagetop-user/: Cargo.toml  README.md
pagetop-user/src/: lib.rs  migration.rs
pagetop-user/src/entity/: mod.rs  role.rs  role_permission.rs  user_role.rs
pagetop-user/src/migration/: m20220312_000001_create_table_role.rs  m20220312_000002_create_table_role_permission.rs  m20220312_000003_create_table_user.rs  m20220312_000004_create_table_user_role.rs  mod.rs
pagetop/config/: common.toml  predefined-settings.toml  settings.default.toml  settings.predefined.toml
pagetop/examples/: hello-name.rs  hello-world.rs
pagetop/src/: all.rs  app.rs  base.rs  config.rs  core.rs  datetime.rs  db.rs  global.rs  html.rs  lib.rs  locale.rs  prelude.rs  response.rs  result.rs  server.rs  service.rs  trace.rs  util.rs
pagetop/src/api/: mod.rs
pagetop/src/app/: application.rs  banner.rs  config.rs  db.rs  definition.rs  fatal_error.rs  locale.rs  mod.rs  tracing.rs
pagetop/src/base/: action.rs  actions.rs  banner.rs  component.rs  layout.rs  mod.rs  module.rs  package.rs  theme.rs  themes.rs
pagetop/src/component/: menu.rs
pagetop/src/config/: data.rs  de.rs  error.rs  file.rs  path.rs  value.rs
pagetop/src/core/: action.rs  all.rs  basic.rs  component.rs  extension.rs  global.rs  hook.rs  layout.rs  mod.rs  module.rs  package.rs  theme.rs
pagetop/src/db/: migration.rs
pagetop/src/html/: assets.rs  attribute.rs  classes.rs  context.rs  favicon.rs  identifier.rs  inline_styles.rs  layout.rs  maud.rs  mod.rs  name.rs  opt_classes.rs  opt_component.rs  opt_id.rs  opt_name.rs  opt_string.rs  opt_translate.rs  opt_translated.rs  optattr.rs  optiden.rs  optional_attr.rs  optional_id.rs  spacing.rs  unit.rs
pagetop/src/module/: all.rs  definition.rs  mod.rs
pagetop/src/response/: fatal_error.rs  json.rs  page.rs  redirect.rs
pagetop/src/theme/: all.rs  definition.rs  mod.rs
pagetop/src/util/: config.rs  figfont.rs
pagetop/tests/: health_check.rs  main.rs
pagetop/tests/html/: unit.rs
pagetop/tests/server/: health_check.rs
tests/: Cargo.toml  component_children.rs  component_html.rs  component_poweredby.rs  config.rs  health_check.rs  html.rs  html_classes.rs  html_markup.rs  html_pm.rs  html_unit.rs  locale.rs  service.rs  util.rs
tests/server/: health_check.rs
tests/src/server/: health_check.rs
website/: .gitignore  Cargo.toml  README.md  build.rs
website/config/: default.toml
website/doc/: book.toml
website/doc/en/: book.toml
website/doc/es/: book.toml
website/doc/theme/: book.js  index.hbs
website/src/: main.rs  mdbook.rs
(+727 files in other folders)
