[package]
name = "pagetop"
version = "0.3.0"
edition = "2021"

description = """
    Un entorno de desarrollo para crear soluciones web modulares, extensibles y configurables.
"""
categories = ["web-programming::http-server"]
keywords = ["pagetop", "web", "framework", "frontend", "ssr"]

repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
concat-string = "1.0.1"
config = { version = "0.15.13", default-features = false, features = ["toml"] }
figlet-rs = "0.1.5"
indoc = "2.0.6"
itoa = "1.0.15"
parking_lot = "0.12.4"
paste = { package = "pastey", version = "0.1.0" }
substring = "1.4.5"
terminal_size = "0.4.2"

tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-actix-web = "0.7.19"

fluent-templates = "0.13.0"
unic-langid = { version = "0.9.6", features = ["macros"] }

actix-web = { workspace = true, default-features = true }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web-files = { package = "actix-files", version = "0.6.6" }

serde = { version = "1.0", features = ["derive"] }

pagetop-macros.workspace = true
pagetop-statics.workspace = true

[features]
default = []
testing = []

[dev-dependencies]
tempfile = "3.20.0"

[build-dependencies]
pagetop-build.workspace = true


[workspace]
resolver = "2"
members = [
    "helpers/pagetop-build",
    "helpers/pagetop-macros",
    "helpers/pagetop-statics",
]

[workspace.package]
repository = "https://git.cillero.es/manuelcillero/pagetop"
homepage = "https://pagetop.cillero.es"
license = "MIT OR Apache-2.0"
authors = ["Manuel Cillero <manuel@cillero.es>"]

[workspace.dependencies]
actix-web = { version = "4.11.0", default-features = false }

pagetop-build = { version = "0.3", path = "helpers/pagetop-build" }
pagetop-macros = { version = "0.1", path = "helpers/pagetop-macros" }
pagetop-statics = { version = "0.1", path = "helpers/pagetop-statics" }
