[package]
name = "pagetop"
version = "0.4.0"
edition = "2021"

description = """
    Un entorno de desarrollo para crear soluciones web modulares, extensibles y configurables.
"""
categories = ["web-programming::http-server"]
keywords = ["pagetop", "web", "framework", "frontend", "ssr"]

repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = "0.4"
colored = "3.0"
concat-string = "1.0"
config = { version = "0.15", default-features = false, features = ["toml"] }
figlet-rs = "0.1"
indoc = "2.0"
itoa = "1.0"
parking_lot = "0.12"
paste = { package = "pastey", version = "0.1" }
substring = "1.4"
terminal_size = "0.4"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"

fluent-templates = "0.13"
unic-langid = { version = "0.9", features = ["macros"] }

actix-web = { workspace = true, default-features = true }
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-web-files = { package = "actix-files", version = "0.6" }

serde = { version = "1.0", features = ["derive"] }

pagetop-macros.workspace = true
pagetop-statics.workspace = true

[features]
default = []
testing = []

[dev-dependencies]
tempfile = "3.23"
serde_json = "1.0"
pagetop-aliner.workspace = true
pagetop-bootsier.workspace = true

[build-dependencies]
pagetop-build.workspace = true


[workspace]
resolver = "2"
members = [
    # Helpers
    "helpers/pagetop-build",
    "helpers/pagetop-macros",
    "helpers/pagetop-statics",
    # Extensions
    "extensions/pagetop-aliner",
    "extensions/pagetop-bootsier",
]

[workspace.package]
repository = "https://git.cillero.es/manuelcillero/pagetop"
homepage = "https://pagetop.cillero.es"
license = "MIT OR Apache-2.0"
authors = ["Manuel Cillero <manuel@cillero.es>"]

[workspace.dependencies]
actix-web = { version = "4.11", default-features = false }
# Helpers
pagetop-build = { version = "0.3", path = "helpers/pagetop-build" }
pagetop-macros = { version = "0.2", path = "helpers/pagetop-macros" }
pagetop-statics = { version = "0.1", path = "helpers/pagetop-statics" }
# Extensions
pagetop-aliner = { version = "0.0", path = "extensions/pagetop-aliner" }
pagetop-bootsier = { version = "0.0", path = "extensions/pagetop-bootsier" }
# PageTop
pagetop = { version = "0.4", path = "." }
