[package]
name = "drust"
version = "0.0.2"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    A modern web Content Management System to share your world.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
actix-web = "4"
pagetop = { version = "0.0", path = "../pagetop", features = ["mysql"], default-features = false }
# Themes.
pagetop-aliner = { version = "0.0", path = "../pagetop-aliner" }
pagetop-bootsier = { version = "0.0", path = "../pagetop-bootsier" }
pagetop-bulmix = { version = "0.0", path = "../pagetop-bulmix" }
# Modules.
pagetop-homedemo = { version = "0.0", path = "../pagetop-homedemo" }
pagetop-admin = { version = "0.0", path = "../pagetop-admin" }
pagetop-user = { version = "0.0", path = "../pagetop-user" }
pagetop-node = { version = "0.0", path = "../pagetop-node" }
