[package]
name = "drust"
version = "0.0.3"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    A modern web Content Management System to share your world.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "MIT OR Apache-2.0"

[dependencies]
pagetop = { version = "0.0", path = "../", features = ["mysql"], default-features = false }
# Packages.
pagetop-homedemo = { version = "0.0", path = "../packages/pagetop-homedemo" }
pagetop-admin = { version = "0.0", path = "../packages/pagetop-admin" }
pagetop-user = { version = "0.0", path = "../packages/pagetop-user" }
pagetop-node = { version = "0.0", path = "../packages/pagetop-node" }
# Themes.
pagetop-bootsier = { version = "0.0", path = "../packages/pagetop-bootsier" }
pagetop-bulmix = { version = "0.0", path = "../packages/pagetop-bulmix" }
