[package]
name = "drust"
version = "0.0.4"
edition = "2021"

description = """\
    Un Sistema de Gestión de Contenidos (CMS) basado en PageTop para compartir tu mundo.\
"""
default-run = "drust"

repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pagetop.workspace = true
pagetop-bootsier.workspace = true

#pagetop-admin = { version = "0.0", path = "../pagetop-admin" }
#pagetop-user = { version = "0.0", path = "../pagetop-user" }
#pagetop-node = { version = "0.0", path = "../pagetop-node" }
