[package]
name = "pagetop-admin"
version = "0.0.6"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Module for PageTop that provides a common place for other modules to handle general site \
    settings for administrators.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { path = "../pagetop", version = "0.0" }
pagetop-megamenu = { path = "../pagetop-megamenu", version = "0.0" }
maud = "0.24.0"
