[package]
name = "pagetop-admin"
version = "0.0.12"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Module for PageTop that provides a common place for other modules to handle general site \
    settings for administrators.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { version = "0.0", path = "../pagetop" }
pagetop-minimal = { version = "0.0", path = "../pagetop-minimal" }
pagetop-megamenu = { version = "0.0", path = "../pagetop-megamenu" }
