[package]
name = "pagetop-aliner"
version = "0.0.4"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Theme for PageTop with a basic set of styles that encloses HTML elements with boxes to show an \
    outline of the page layout and components display.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { version = "0.0", path = "../pagetop" }
static-files = "0.2.3"

[build-dependencies]
pagetop-build = { version = "0.0", path = "../pagetop-build" }
