[package]
name = "pagetop-bootsier"
version = "0.0.2"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Theme for PageTop that uses the Bootstrap framework for page layout and components display.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { path = "../pagetop", version = "0.0" }
pagetop-jquery = { path = "../pagetop-jquery", version = "0.0" }
static-files = "0.2.3"
maud = "0.25.0"

[build-dependencies]
pagetop-build = { path = "../pagetop-build", version = "0.0" }
