[package]
name = "pagetop-bootsier"
version = "0.0.13"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Theme for PageTop that uses the Bootstrap framework for page layout and components display.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { version = "0.0", path = "../pagetop" }
static-files = "0.2.3"

[build-dependencies]
pagetop-build = { version = "0.0", path = "../pagetop-build" }
