[package]
name = "pagetop-jquery"
version = "0.0.2"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Module for PageTop that allows adding jQuery in pages that include components or themes that \
    use this JavaScript library to interact with the HTML document.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { path = "../pagetop", version = "0.0" }
static-files = "0.2.3"

[build-dependencies]
pagetop-build = { path = "../pagetop-build", version = "0.0" }
