[package]
name = "pagetop-jquery"
version = "0.0.6"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Module for PageTop that allows adding jQuery in pages that include components or themes that \
    use this JavaScript library to interact with the HTML document.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { version = "0.0", path = "../pagetop" }
static-files = "0.2.3"

[build-dependencies]
pagetop-build = { version = "0.0", path = "../pagetop-build" }
