[package]
name = "pagetop-macros"
version = "0.0.1"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Useful macros for creating web solutions using the PageTop framework.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
concat-string = "1.0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
