[package]
name = "pagetop-macros"
version = "0.0.5"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Group the main procedural and declarative macros for use from PageTop.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
concat-string = "1.0.1"
proc-macro2 = "1.0"
proc-macro-crate = "1.3.1"
proc-macro-error = "1.0.4"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
