[package]
name = "pagetop-minimal"
version = "0.0.1"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Theme for PageTop that uses minimal CSS for page layout and component display.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { path = "../pagetop", version = "0.0" }
maud = "0.24.0"
