[package]
name = "pagetop-minimal"
version = "0.0.2"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Theme for PageTop with a minimal set of styles to view the basic composition of pages and \
    components.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { path = "../pagetop", version = "0.0" }
maud = "0.25.0"
