[package]
name = "pagetop-minimal"
version = "0.0.10"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Module for PageTop with a minimal set of components for page composition.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { version = "0.0", path = "../pagetop" }
static-files = "0.2.3"

[build-dependencies]
pagetop-build = { version = "0.0", path = "../pagetop-build" }
