[package]
name = "pagetop-user"
version = "0.0.5"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Manages the user registration and login system.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { path = "../pagetop", version = "0.0", features = ["database"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
