[package]
name = "pagetop-user"
version = "0.0.6"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Module to add user management, roles, permissions and sessions in applications developed with \
    PageTop.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { path = "../pagetop", version = "0.0", features = ["database"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
