[package]
name = "pagetop-user"
version = "0.0.7"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    Module to add user management, roles, permissions and sessions in applications developed with \
    PageTop.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
pagetop = { version = "0.0", path = "../pagetop", features = ["database"], default-features = false }
pagetop-minimal = { version = "0.0", path = "../pagetop-minimal" }
serde = { version = "1.0", features = ["derive"] }
