[package]
name = "pagetop"
version = "0.0.56"
edition = "2021"

description = """\
    An opinionated web framework to build modular Server-Side Rendering web solutions.\
"""
categories  = ["web-programming", "gui", "development-tools", "asynchronous"]
keywords    = ["pagetop", "web", "framework", "frontend", "ssr"]
readme      = "../README.md"

homepage    = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
license     = { workspace = true }

[lib]
name = "pagetop"

[dependencies]
colored       = "2.1.0"
concat-string = "1.0.1"
figlet-rs     = "0.1.5"
itoa          = "1.0.11"
nom           = "7.1.3"
paste         = "1.0.15"
substring     = "1.4.5"
terminal_size = "0.4.0"
toml          = "0.8.19"

tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-actix-web = "0.7.15"

fluent-bundle = "0.15.3"
fluent-templates = "0.11.0"
unic-langid = { version = "0.9.5", features = ["macros"] }

actix-web = "4.9.0"
actix-web-files = { package = "actix-files", version = "0.6.6" }
actix-web-static-files = "4.0.1"
actix-session = { version = "0.10.1", features = ["cookie-session"] }

serde.workspace = true
static-files.workspace = true

pagetop-macros.workspace = true
