[package]
name = "pagetop"
version = "0.0.61"
edition = "2021"

description = """\
    Un entorno de desarrollo para crear soluciones web modulares, extensibles y configurables.\
"""
categories = ["web-programming", "gui", "development-tools", "asynchronous"]
keywords = ["pagetop", "web", "framework", "frontend", "ssr"]
readme = "../README.md"

repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = "0.4.39"
colored = "3.0.0"
concat-string = "1.0.1"
figlet-rs = "0.1.5"
itoa = "1.0.14"
nom = "7.1.3"
paste = "1.0.15"
regex = "1.11.1"
serde.workspace = true
substring = "1.4.5"
terminal_size = "0.4.1"
toml = "0.8.19"

tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-actix-web = "0.7.15"

fluent-templates = "0.13.0"
unic-langid = { version = "0.9.5", features = ["macros"] }

actix-web = "4.9.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web-files = { package = "actix-files", version = "0.6.6" }
actix-web-static-files = "4.0.1"
static-files.workspace = true

pagetop-macros.workspace = true

[build-dependencies]
pagetop-build.workspace = true

[dev-dependencies]
serde_json.workspace = true
