[package]
name = "pagetop-website"
version = "0.0.1"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    PageTop and Drust website.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://gitlab.com/manuelcillero/pagetop/website"
license = "Apache-2.0 or MIT"

[dependencies.pagetop]
path = "../pagetop"

[dependencies]
actix-web = "4.2.1"
static-files = "0.2.3"
pagetop-mdbook = { path = "../pagetop-mdbook" }
maud = "0.24.0"

[build-dependencies]
pagetop = { path = "../pagetop" }
pagetop-mdbook = { path = "../pagetop-mdbook" }
