[package]
name = "pagetop-website"
version = "0.0.1"
edition = "2021"

authors = [
    "Manuel Cillero <manuel@cillero.es>"
]
description = """\
    PageTop website.\
"""
homepage = "https://pagetop.cillero.es"
repository = "https://github.com/manuelcillero/pagetop"
license = "Apache-2.0 OR MIT"

[dependencies]
actix-web = "4.2.1"
static-files = "0.2.3"
pagetop = { path = "../pagetop", version = "0.0" }
pagetop-mdbook = { path = "../pagetop-mdbook", version = "0.0" }
maud = "0.24.0"

[build-dependencies]
pagetop = { path = "../pagetop", version = "0.0" }
pagetop-mdbook = { path = "../pagetop-mdbook", version = "0.0" }
