[package]
name = "pagetop-bootsier"
version = "0.0.18"
edition = "2021"

description = """
    Tema de PageTop basado en Bootstrap para aplicar su catálogo de estilos y componentes flexibles.
"""
categories = ["web-programming", "gui"]
keywords = ["pagetop", "theme", "bootstrap", "css", "js"]

repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pagetop.workspace = true
serde.workspace = true

[build-dependencies]
pagetop-build.workspace = true
