[package]
name = "pagetop-seaorm"
version = "0.0.4"

description = """
    Proporciona a PageTop acceso basado en SeaORM a bases de datos relacionales.
"""
categories = ["database", "development-tools", "asynchronous"]
keywords = ["pagetop", "database", "sql", "orm", "ssr"]

repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

[dependencies]
async-trait.workspace = true
pagetop.workspace = true
sea-orm.workspace = true
sea-schema.workspace = true
serde.workspace = true
tokio.workspace = true
url.workspace = true
