[package]
name = "pagetop-build"
version = "0.1.1"
edition = "2021"

description = """
    Prepara un conjunto de archivos estáticos o archivos SCSS compilados para ser incluidos en el
    binario de un proyecto PageTop.
"""
categories = ["development-tools::build-utils"]
keywords = ["pagetop", "build", "assets", "resources", "static"]

repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
grass = "0.13.4"
static-files.workspace = true
