[package]
name = "pagetop-build"
version = "0.3.2"

description = """
    Prepara un conjunto de archivos estáticos o archivos SCSS compilados para ser incluidos en el
    binario de un proyecto PageTop.
"""
categories = ["development-tools::build-utils"]
keywords = ["pagetop", "build", "assets", "resources", "static"]

repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
grass.workspace = true
pagetop-statics.workspace = true
