[package]
name = "pagetop-macros"
version = "0.1.0"
edition = "2021"

description = """
    Una colección de macros que mejoran la experiencia de desarrollo con PageTop.
"""
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["pagetop", "macros", "proc-macros", "codegen"]

repository.workspace = true
homepage.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
proc-macro2-diagnostics = { version = "0.10.1", default-features = false }
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
