[package]
name = "pagetop-macros"
version = "0.3.0"

description = """
    Una colección de macros que mejoran la experiencia de desarrollo con PageTop.
"""
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["pagetop", "macros", "proc-macros", "codegen"]

repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
proc-macro2-diagnostics.workspace = true
quote.workspace = true
syn.workspace = true
