[package]
name = "pagetop-minimal"
version = "0.1.0"

description = """
    Reúne un conjunto mínimo de macros para mejorar el formato y la eficiencia de operaciones
    básicas en PageTop.
"""
categories = ["development-tools::build-utils"]
keywords = ["pagetop", "build", "assets", "resources", "static"]

repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
concat-string.workspace = true
indoc.workspace = true
pastey.workspace = true
